fixed youtube vids not showing; added some more styles to main.css

--- a/main.css
+++ b/main.css
@@ -73,10 +73,11 @@ span {
         display: flex;
         flex-direction: column;
         width: 100%;
+        /* height: 80%; */
     }
 
     #flex-first > p {
-        font-size: 40px;   
+        font-size: 36px;   
         width: fit-content;         
     }
 
@@ -93,6 +94,11 @@ span {
         border-radius: 30%;
         width: 5vw;
         height: 5vw;
+    }
+
+    iframe {
+        width: 400px;
+        height: 225px;
     }
 }
 
@@ -123,6 +129,11 @@ span {
     .end {
         align-self: flex-end;
     }
+
+    iframe {
+        width: 640px;
+        height: 480px;
+    }
 }
 
 /* desktop size */
@@ -136,10 +147,14 @@ span {
     #flex-first > p {
         font-size: 120px;            
     }
+
+    iframe {
+        width: 1280px;
+        height: 720px;
+    }
 }
 
 #flex-carousel {
-    /* border: 1px solid red; */
     position: fixed;
     bottom: 5%;
     width: 100vw;
@@ -151,6 +166,21 @@ span {
 .carousel-button {
     background-color: #129490;
     box-shadow: 3px 3px #27272C;
+}
+
+.project-title {
+    text-transform: lowercase;
+    font-family: 'Lora', serif;
+    font-style: normal;
+    font-size: 40px;
+    color: #B0813D;
+    background-color: #27272C;
+    width: fit-content;
+    padding-right: 20%;
+}
+
+.one, .two, .three {
+        
 }
 
 
